Prevent illegal access warnings
Deny illegal access, and fix it by specific package if it happens.